force-app/main/default/objects/ANI__c/ANI__c.object-meta.xml
<CustomObject>
    <label>ANI</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ANIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>