force-app/main/default/objects/ANI__c/fields/Assigned_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Campaign__c</fullName>
    <label>Assigned Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>