force-app/main/default/objects/ANI__c/fields/Assigned_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_Name__c</fullName>
    <label>Assigned User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>