force-app/main/default/objects/ANI__c/fields/b7__c.field-meta.xml
<CustomField>
    <fullName>b7__c</fullName>
    <label>b7</label>
    <length>255</length>
    <type>Text</type>
</CustomField>