force-app/main/default/objects/ANI__c/fields/Is_User_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is User Assigned</label>
    <type>Checkbox</type>
</CustomField>