force-app/main/default/objects/ANI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>b7__c</columns>
    <columns>City__c</columns>
    <columns>County__c</columns>
    <columns>isActive__c</columns>
    <columns>Blacklisted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Assigned_Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blacklisted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>